--- a/index.html
+++ b/index.html
@@ -1600,7 +1600,23 @@
           return;
         }
         if (user.role.canRequest) {
-          const btn = document.createElement("div");
+          const profile = document.querySelector(".app > .main > .profile");
+          const a = document.createElement("a");
+          a.href = user.role.endpoint;
+          a.textContent = "Go To Admin";
+          Object.assign(a.style, {
+            padding: "10px 20px",
+            borderRadius: "100px",
+            textDecoration: "none",
+            color: "var(--bg)",
+            backgroundColor: "var(--on-bg)",
+            position: "absolute",
+            top: "50%",
+            left: "50%",
+            transform: "translate(-50%, -50%)",
+            cursor: "none"
+          });
+          profile.appendChild(a);
         }
       }
 
