--- a/admin/index.html
+++ b/admin/index.html
@@ -1019,9 +1019,10 @@
           card.remove();
         });
         data.forEach(data => {
-          let myId;
-          if (data.id.length < 8){
-            myId = 0 + myId
+          let myId = data.id;
+          console.log(myId)
+          if (String(myId).length < 8){
+            myId = `0${myId}`;
           }
           const date = parseId(myId).toDate();
           const timestamp = new Date(data.timestamp);
