--- a/index.html
+++ b/index.html
@@ -1343,18 +1343,18 @@
           const preloader = document.querySelector(".home > .main .coll .preloader");
           try {
             preloader.classList.add("active");
-            const res = await fetch("https://script.google.com/macros/s/AKfycbzzvCPKVCipQmze4YTP6DcjFCq5yBwYHqyqZHtp0a-iarlF1mZ8ND_TD4orbHy1r2kqOQ/exec");
+            const res = await fetch("https://script.google.com/macros/s/AKfycbzzvCPKVCipQmze4YTP6DcjFCq5yBwYHqyqZHtp0a-iarlF1mZ8ND_TD4orbHy1r2kqOQ/exec?t=coll");
             if (!res.ok) throw new Error();
             const data = await res.json();
-            if (!data.data[0]?.length) {
+            if (!data.data?.length) {
               preloader.classList.remove("active");
               localStorage.removeItem("application.data.coll");
               //
               return;
             }
             preloader.classList.remove("active");
-            localStorage.setItem("application.data.coll", JSON.stringify(data.data[0]));
-            sessionStorage.setItem("application.data.coll", JSON.stringify(data.data[0]));
+            localStorage.setItem("application.data.coll", JSON.stringify(data.data));
+            sessionStorage.setItem("application.data.coll", JSON.stringify(data.data));
             renderColl();
           } catch (err) {
             const data = (() => {
@@ -1385,18 +1385,18 @@
           const preloader = document.querySelector(".home > .main .exp .preloader");
           try {
             preloader.classList.add("active");
-            const res = await fetch("https://script.google.com/macros/s/AKfycbzzvCPKVCipQmze4YTP6DcjFCq5yBwYHqyqZHtp0a-iarlF1mZ8ND_TD4orbHy1r2kqOQ/exec");
+            const res = await fetch("https://script.google.com/macros/s/AKfycbzzvCPKVCipQmze4YTP6DcjFCq5yBwYHqyqZHtp0a-iarlF1mZ8ND_TD4orbHy1r2kqOQ/exec?t=exp");
             if (!res.ok) throw new Error();
             const data = await res.json();
-            if (!data.data[1]?.length) {
+            if (!data.data?.length) {
               preloader.classList.remove("active");
               sessionStorage.removeItem("application.data.exp");
               //
               return;
             }
             preloader.classList.remove("active");
-            localStorage.setItem("application.data.exp", JSON.stringify(data.data[1]));
-            sessionStorage.setItem("application.data.exp", JSON.stringify(data.data[1]));
+            localStorage.setItem("application.data.exp", JSON.stringify(data.data));
+            sessionStorage.setItem("application.data.exp", JSON.stringify(data.data));
             renderExp();
           } catch (err) {
             const data = (() => {
@@ -1496,56 +1496,58 @@
           card.remove();
         });
         data.forEach((data, index) => {
-          const date = parseId(data.id).toDate();
-          const card = document.createElement("div");
-          card.classList.add("gen-card");
-          const cardHeader = document.createElement("div");
-          cardHeader.classList.add("card-header");
-          const headerIcon = document.createElement("div");
-          headerIcon.classList.add("header-icon");
-          const svg = document.createElement("div");
-          svg.classList.add("svg");
-          svg.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M8 12H6c-1.103 0-2 .897-2 2v2c0 1.103.897 2 2 2h2c1.103 0 2-.897 2-2v-2c0-1.103-.897-2-2-2Zm-2 4v-2h2v2H6ZM19 2h-1V1a1 1 0 1 0-2 0v1H8V1a1 1 0 1 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h14c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5ZM5 4h14c1.654 0 3 1.346 3 3v1H2V7c0-1.654 1.346-3 3-3Zm14 18H5c-1.654 0-3-1.346-3-3v-9h20v9c0 1.654-1.346 3-3 3Z"></path></g></svg>`;
-          headerIcon.appendChild(svg);
-          cardHeader.appendChild(headerIcon);
-          const headerInfo = document.createElement("div");
-          headerInfo.classList.add("header-info");
-          const tit = document.createElement("div");
-          tit.classList.add("tit");
-          tit.innerHTML = `<span>${daysEn[date.getDay()]} (${daysBn[date.getDay()]})</span>`;
-          headerInfo.appendChild(tit);
-          const des = document.createElement("div");
-          des.classList.add("des");
-          des.innerHTML = `<span>${date.getDate()} ${months[date.getMonth()]}, ${date.getFullYear()} - ${timeAgo(new Date(data.timestamp))}</span>`;
-          headerInfo.appendChild(des);
-          cardHeader.appendChild(headerInfo);
-          card.appendChild(cardHeader);
-          const cardMain = document.createElement("div");
-          cardMain.classList.add("card-main");
-          const cardHeading = document.createElement("div");
-          cardHeading.classList.add("card-heading");
-          cardHeading.innerHTML = `<span>Overview</span>`;
-          cardMain.appendChild(cardHeading);
-          const cardOverview = document.createElement("div");
-          cardOverview.classList.add("card-overview");
-          cardOverview.innerHTML = `<span>${truncate(data.overview, 100)}</span>`;
-          cardOverview.addEventListener("click", () => {
-            overview(data);
-          });
-          cardMain.appendChild(cardOverview);
-          card.appendChild(cardMain);
-          const cardFooter = document.createElement("div");
-          cardFooter.classList.add("card-footer");
-          const cardTag = document.createElement("div");
-          cardTag.classList.add("card-tag");
-          cardTag.innerHTML = `<span>${toInr(data.tag)}</span>`;
-          cardFooter.appendChild(cardTag);
-          card.appendChild(cardFooter);
-          if (flag) {
-            if (root.firstElementChild) {
-              root.insertBefore(card, root.firstChild);
+          try {
+            const date = parseId(data.id).toDate();
+            const card = document.createElement("div");
+            card.classList.add("gen-card");
+            const cardHeader = document.createElement("div");
+            cardHeader.classList.add("card-header");
+            const headerIcon = document.createElement("div");
+            headerIcon.classList.add("header-icon");
+            const svg = document.createElement("div");
+            svg.classList.add("svg");
+            svg.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M8 12H6c-1.103 0-2 .897-2 2v2c0 1.103.897 2 2 2h2c1.103 0 2-.897 2-2v-2c0-1.103-.897-2-2-2Zm-2 4v-2h2v2H6ZM19 2h-1V1a1 1 0 1 0-2 0v1H8V1a1 1 0 1 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h14c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5ZM5 4h14c1.654 0 3 1.346 3 3v1H2V7c0-1.654 1.346-3 3-3Zm14 18H5c-1.654 0-3-1.346-3-3v-9h20v9c0 1.654-1.346 3-3 3Z"></path></g></svg>`;
+            headerIcon.appendChild(svg);
+            cardHeader.appendChild(headerIcon);
+            const headerInfo = document.createElement("div");
+            headerInfo.classList.add("header-info");
+            const tit = document.createElement("div");
+            tit.classList.add("tit");
+            tit.innerHTML = `<span>${daysEn[date.getDay()]} (${daysBn[date.getDay()]})</span>`;
+            headerInfo.appendChild(tit);
+            const des = document.createElement("div");
+            des.classList.add("des");
+            des.innerHTML = `<span>${date.getDate()} ${months[date.getMonth()]}, ${date.getFullYear()} - ${timeAgo(new Date(data.timestamp))}</span>`;
+            headerInfo.appendChild(des);
+            cardHeader.appendChild(headerInfo);
+            card.appendChild(cardHeader);
+            const cardMain = document.createElement("div");
+            cardMain.classList.add("card-main");
+            const cardHeading = document.createElement("div");
+            cardHeading.classList.add("card-heading");
+            cardHeading.innerHTML = `<span>Overview</span>`;
+            cardMain.appendChild(cardHeading);
+            const cardOverview = document.createElement("div");
+            cardOverview.classList.add("card-overview");
+            cardOverview.innerHTML = `<span>${truncate(data.overview, 100)}</span>`;
+            cardOverview.addEventListener("click", () => {
+              overview(data);
+            });
+            cardMain.appendChild(cardOverview);
+            card.appendChild(cardMain);
+            const cardFooter = document.createElement("div");
+            cardFooter.classList.add("card-footer");
+            const cardTag = document.createElement("div");
+            cardTag.classList.add("card-tag");
+            cardTag.innerHTML = `<span>${toInr(data.tag)}</span>`;
+            cardFooter.appendChild(cardTag);
+            card.appendChild(cardFooter);
+            if (flag) {
+              if (root.firstElementChild) {
+                root.insertBefore(card, root.firstChild);
+              } else root.appendChild(card);
             } else root.appendChild(card);
-          } else root.appendChild(card);
+          } catch {}
         });
         const dialog = new BottomSheetDialog(document.body);
         function overview(data) {
