--- a/admin/index.html
+++ b/admin/index.html
@@ -1020,79 +1020,81 @@
           card.remove();
         });
         data.forEach(data => {
-          const date = parseId(data.id).toDate();
-          const timestamp = new Date(data.timestamp);
-          const now = new Date();
-          const card = document.createElement("div");
-          card.classList.add("gen-card");
-          const cardHeader = document.createElement("div");
-          cardHeader.classList.add("card-header");
-          const headerIcon = document.createElement("div");
-          headerIcon.classList.add("header-icon");
-          const svg = document.createElement("div");
-          svg.classList.add("svg");
-          svg.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M8 12H6c-1.103 0-2 .897-2 2v2c0 1.103.897 2 2 2h2c1.103 0 2-.897 2-2v-2c0-1.103-.897-2-2-2Zm-2 4v-2h2v2H6ZM19 2h-1V1a1 1 0 1 0-2 0v1H8V1a1 1 0 1 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h14c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5ZM5 4h14c1.654 0 3 1.346 3 3v1H2V7c0-1.654 1.346-3 3-3Zm14 18H5c-1.654 0-3-1.346-3-3v-9h20v9c0 1.654-1.346 3-3 3Z"></path></g></svg>`;
-          headerIcon.appendChild(svg);
-          cardHeader.appendChild(headerIcon);
-          const headerInfo = document.createElement("div");
-          headerInfo.classList.add("header-info");
-          const tit = document.createElement("div");
-          tit.classList.add("tit");
-          tit.innerHTML = `<span>${daysEn[date.getDay()]} (${daysBn[date.getDay()]})</span>`;
-          headerInfo.appendChild(tit);
-          const des = document.createElement("div");
-          des.classList.add("des");
-          des.innerHTML = `<span>${date.getDate()} ${months[date.getMonth()]}, ${date.getFullYear()} - ${timeAgo(new Date(data.timestamp))}</span>`;
-          headerInfo.appendChild(des);
-          cardHeader.appendChild(headerInfo);
-          //
-          const headerOption = document.createElement("div");
-          headerOption.classList.add("header-option");
-          const option = document.createElement("div");
-          option.classList.add("option");
-          if (now - timestamp <= 86400000) {
-            option.addEventListener("click", e => {
-              const fragment = sessionStorage.getItem("app[0][1][fragment][admin]") || "coll";
-              const index = ["coll", "exp"].indexOf(fragment);
-              const query = "edit";
-              openEditor(index, query, data);
-            });
-          } else {
-            option.classList.add("disabled");
-          }
-          const optionIcon = document.createElement("div");
-          optionIcon.classList.add("option-icon");
-          optionIcon.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><circle cx="256" cy="53.333" r="53.333"></circle><circle cx="256" cy="256" r="53.333"></circle><circle cx="256" cy="458.667" r="53.333"></circle></g></svg>`;
-          //optionIcon.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M22.853 1.148a3.626 3.626 0 0 0-5.124 0L1.465 17.412A4.968 4.968 0 0 0 0 20.947V23a1 1 0 0 0 1 1h2.053a4.966 4.966 0 0 0 3.535-1.464L22.853 6.271a3.626 3.626 0 0 0 0-5.123ZM5.174 21.122A3.022 3.022 0 0 1 3.053 22H2v-1.053a2.98 2.98 0 0 1 .879-2.121L15.222 6.483l2.3 2.3ZM21.438 4.857l-2.506 2.507-2.3-2.295 2.507-2.507a1.623 1.623 0 1 1 2.295 2.3Z"></path></g></svg>`;
-          option.appendChild(optionIcon);
-          headerOption.appendChild(option);
-          cardHeader.appendChild(headerOption);
-          //
-          card.appendChild(cardHeader);
-          const cardMain = document.createElement("div");
-          cardMain.classList.add("card-main");
-          const cardHeading = document.createElement("div");
-          cardHeading.classList.add("card-heading");
-          cardHeading.innerHTML = `<span>Overview</span>`;
-          cardMain.appendChild(cardHeading);
-          const cardOverview = document.createElement("div");
-          cardOverview.classList.add("card-overview");
-          cardOverview.innerHTML = `<span>${data.overview}</span>`;
-          cardOverview.addEventListener("click", () => {});
-          cardMain.appendChild(cardOverview);
-          card.appendChild(cardMain);
-          const cardFooter = document.createElement("div");
-          cardFooter.classList.add("card-footer");
-          const cardTag = document.createElement("div");
-          cardTag.classList.add("card-tag");
-          cardTag.innerHTML = `<span>${toInr(data.tag)}</span>`;
-          cardFooter.appendChild(cardTag);
-          card.appendChild(cardFooter);
-          if (flag) {
-            if (root.firstElementChild) {
-              root.insertBefore(card, root.firstChild);
+          try {
+            const date = parseId(data.id).toDate();
+            const timestamp = new Date(data.timestamp);
+            const now = new Date();
+            const card = document.createElement("div");
+            card.classList.add("gen-card");
+            const cardHeader = document.createElement("div");
+            cardHeader.classList.add("card-header");
+            const headerIcon = document.createElement("div");
+            headerIcon.classList.add("header-icon");
+            const svg = document.createElement("div");
+            svg.classList.add("svg");
+            svg.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M8 12H6c-1.103 0-2 .897-2 2v2c0 1.103.897 2 2 2h2c1.103 0 2-.897 2-2v-2c0-1.103-.897-2-2-2Zm-2 4v-2h2v2H6ZM19 2h-1V1a1 1 0 1 0-2 0v1H8V1a1 1 0 1 0-2 0v1H5C2.243 2 0 4.243 0 7v12c0 2.757 2.243 5 5 5h14c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5ZM5 4h14c1.654 0 3 1.346 3 3v1H2V7c0-1.654 1.346-3 3-3Zm14 18H5c-1.654 0-3-1.346-3-3v-9h20v9c0 1.654-1.346 3-3 3Z"></path></g></svg>`;
+            headerIcon.appendChild(svg);
+            cardHeader.appendChild(headerIcon);
+            const headerInfo = document.createElement("div");
+            headerInfo.classList.add("header-info");
+            const tit = document.createElement("div");
+            tit.classList.add("tit");
+            tit.innerHTML = `<span>${daysEn[date.getDay()]} (${daysBn[date.getDay()]})</span>`;
+            headerInfo.appendChild(tit);
+            const des = document.createElement("div");
+            des.classList.add("des");
+            des.innerHTML = `<span>${date.getDate()} ${months[date.getMonth()]}, ${date.getFullYear()} - ${timeAgo(new Date(data.timestamp))}</span>`;
+            headerInfo.appendChild(des);
+            cardHeader.appendChild(headerInfo);
+            //
+            const headerOption = document.createElement("div");
+            headerOption.classList.add("header-option");
+            const option = document.createElement("div");
+            option.classList.add("option");
+            if (now - timestamp <= 86400000) {
+              option.addEventListener("click", e => {
+                const fragment = sessionStorage.getItem("app[0][1][fragment][admin]") || "coll";
+                const index = ["coll", "exp"].indexOf(fragment);
+                const query = "edit";
+                openEditor(index, query, data);
+              });
+            } else {
+              option.classList.add("disabled");
+            }
+            const optionIcon = document.createElement("div");
+            optionIcon.classList.add("option-icon");
+            optionIcon.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><g><circle cx="256" cy="53.333" r="53.333"></circle><circle cx="256" cy="256" r="53.333"></circle><circle cx="256" cy="458.667" r="53.333"></circle></g></svg>`;
+            //optionIcon.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M22.853 1.148a3.626 3.626 0 0 0-5.124 0L1.465 17.412A4.968 4.968 0 0 0 0 20.947V23a1 1 0 0 0 1 1h2.053a4.966 4.966 0 0 0 3.535-1.464L22.853 6.271a3.626 3.626 0 0 0 0-5.123ZM5.174 21.122A3.022 3.022 0 0 1 3.053 22H2v-1.053a2.98 2.98 0 0 1 .879-2.121L15.222 6.483l2.3 2.3ZM21.438 4.857l-2.506 2.507-2.3-2.295 2.507-2.507a1.623 1.623 0 1 1 2.295 2.3Z"></path></g></svg>`;
+            option.appendChild(optionIcon);
+            headerOption.appendChild(option);
+            cardHeader.appendChild(headerOption);
+            //
+            card.appendChild(cardHeader);
+            const cardMain = document.createElement("div");
+            cardMain.classList.add("card-main");
+            const cardHeading = document.createElement("div");
+            cardHeading.classList.add("card-heading");
+            cardHeading.innerHTML = `<span>Overview</span>`;
+            cardMain.appendChild(cardHeading);
+            const cardOverview = document.createElement("div");
+            cardOverview.classList.add("card-overview");
+            cardOverview.innerHTML = `<span>${data.overview}</span>`;
+            cardOverview.addEventListener("click", () => {});
+            cardMain.appendChild(cardOverview);
+            card.appendChild(cardMain);
+            const cardFooter = document.createElement("div");
+            cardFooter.classList.add("card-footer");
+            const cardTag = document.createElement("div");
+            cardTag.classList.add("card-tag");
+            cardTag.innerHTML = `<span>${toInr(data.tag)}</span>`;
+            cardFooter.appendChild(cardTag);
+            card.appendChild(cardFooter);
+            if (flag) {
+              if (root.firstElementChild) {
+                root.insertBefore(card, root.firstChild);
+              } else root.appendChild(card);
             } else root.appendChild(card);
-          } else root.appendChild(card);
+          } catch {}
         });
       }
 
