--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="color-scheme" content="dark light" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preload" href="/app/assets/fonts/GoogleSans-Regular.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="/app/assets/fonts/GoogleSans-Italic.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="/app/assets/fonts/GoogleSans-Medium.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="/app/assets/fonts/GoogleSans-MediumItalic.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="/app/assets/fonts/GoogleSans-Bold.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="/app/assets/fonts/GoogleSans-BoldItalic.ttf" as="font" type="font/ttf" crossorigin />
     <title>OneClub</title>
     <style>
       :root {
@@ -398,7 +405,7 @@
       .gen .card-overview span {
         color: #546685;
         font-size: 14px;
-        font-style:;
+        font-style: italic;
       }
       .gen .card-footer {
         width: 100%;
