--- a/admin/index.html
+++ b/admin/index.html
@@ -424,7 +424,7 @@
       .gen .card-overview span {
         color: #546685;
         font-size: 14px;
-        font-style:;
+        font-style: italic;
       }
       .gen .card-footer {
         width: 100%;
